--- a/scoots/styles/medium.css
+++ b/scoots/styles/medium.css
@@ -1,85 +1,29 @@
 @media only screen and (min-width: 32.5em) {
-
-  footer {
-    font-size: 1.2rem;
-  }
-
-  .social-icon {
-    margin: 10px;
-  }
-
-  .navigation {
-    display: flex;
-    font-size: 1.3rem;
-  }
-
-  .navigation li {
-    display: block;
-    flex: 1 1 auto;
-  }
-
-  .navigation li:first-child {
+  nav a {
     display: none;
   }
-
-  .header-banner {
-    padding: 200px;
+  .menu {
+    display: flex;
+    position: relative;
+    background-color: inherit;
+    left: 0;
+    width: auto;
+    padding: 10px;
   }
 
-  .infoImg {
-    width: 400px;
+  .info {
+    grid-template-columns: repeat(2, 1fr);
   }
 
-  .card {
-    width: 400px;
+  .info h1 {
+    grid-column: span 2;
+  }  
+
+  .card-content hr {
+    width: 250px;    
   }
 
-  .weatherSection {
-    font-size: 1.5rem;
+  .weather {    
+    flex-direction: row;
   }
-
-  .weatherSummary {
-    width: 75%;
-  }
-
-  /*rentals page*/
-
-  .rentalSection h3 {
-    padding-top: 50px;
-    font-size: 2rem;
-  }
-
-  .servicesDiv {
-    width: 80%;
-  }
-
-  .servicesDiv p {
-    padding-left: 10px;
-    font-size: 1.2rem;
-  }
-
-  table {
-    font-size: 1.2rem;
-  }
-
-  form {
-    padding: 20px;
-    width: 90%;
-    margin: auto;
-  }
-
-  .agreement {
-    font-size: 1rem;
-    width: 95%;
-  }
-
-  .logo{
-    display: block;
-  }
-
-  nav {
-    width: unset;
-  }
-  
-
 }
